* Trouble that the display of previewer collapses is repaired. * Trouble to which the scrollbar is displayed with Opera is corrected. * It is corrected that the javascript error had gone out when there is no page navigation.

--- a/wp-content/themes/exhibition/css/libraries.css
+++ b/wp-content/themes/exhibition/css/libraries.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 
 /* Default Style
 ---------------------------------------------------------*/
@@ -16,6 +16,9 @@ body {
 	background: transparent;
 }
 
+body.dynamicPage {
+	overflow: hidden;
+}
 
 h2 {
 	font-size: 4.0em;
