--- a/wp-content/themes/exhibition/css/template.css
+++ b/wp-content/themes/exhibition/css/template.css
@@ -60,7 +60,7 @@
 	padding-right: 15px;
 }
 
-.relative {
+.dynamicPage .footer {
 	margin: -42px auto 0px auto;
 	padding: 0px;
 	position: relative;
